# starling_offboard_cpp

./: CMakeLists.txt  package.xml
include/starling_offboard_cpp/: helper_structs.hpp  service_client_state_machine.hpp  starling_offboard.hpp  state_enum.hpp  utils.hpp
launch/: demo.launch.yaml  offboard.launch.yaml
src/: deprecated.cpp  service_manager.cpp  starling_offboard.cpp  starling_transform_test.cpp  transforms.cpp
